# AbuseAppRust

./: .gitignore  README.md  abuseapp.db  create-icon.bat  package-lock.json  package.json  vite.config.ts  vitest.config.ts
attached_assets/: Новий_Текстовий_документ_(3)_1769019533800.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AccountStatsWidget.tsx  AppTray.tsx  AuthOnboardingModal.tsx  CustomLinkModal.tsx  DailyReminderScheduler.tsx  DailyTasksPanel.tsx  GlobalKeyboardControls.tsx  GlobalWindowControls.tsx  LogsPanel.tsx  ProjectModal.tsx  Sidebar.tsx  ThemeControlPanel.tsx  ThemeEffectPreview.tsx  ThemeEffects.tsx  WindowControls.tsx
client/src/components/ui/: avatar-2.tsx  badge-2.tsx  button-1.tsx  card-1.tsx  daily-tasks-panel.tsx  (+14 more)
client/src/hooks/: use-dashboard.ts  use-stats.ts  use-toast.ts
client/src/lib/: accountStatus.ts  i18n.ts  localStore.ts  projectStorage.ts  tauri-api.ts  telegram-helpers.ts
client/src/pages/: Accounts.tsx  Calendar.tsx  Chrome.tsx  ChromeTauri.tsx  Dashboard.tsx  Settings.tsx  Telegram.tsx  Telegram.tsx.converted.preview  not-found.tsx
client/src/types/: electron.d.ts  index.ts  tauri.d.ts
notes/: next-session.md  tech-audit.md
script/: build.ts
server/: index.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: api-contracts.test.ts  setup.ts  ui-smoke.test.tsx
testsprite_tests/tmp/: code_summary.json  config.json
