[package]
name = "abuseapp"
version = "1.0.2"
description = "AbuseApp Desktop - Account Farm Management Dashboard"
authors = ["AbuseApp Team"]
license = "MIT"
repository = "https://github.com/jenyok3/Abuse-App"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "abuseapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["rustls-tls", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
rfd = "0.16"
sysinfo = "0.30"
url = "2.5"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }
